<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_marginTop="?actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m_margin"
                    android:background="@drawable/border_bacground"
                    android:orientation="vertical">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/m_margin"
                        android:layout_marginTop="@dimen/m_margin"
                        android:background="?android:attr/activatedBackgroundIndicator"
                        android:padding="3dip">

                        <ImageView
                            android:id="@+id/icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="2dp"
                            android:src="@drawable/ic_broccoli" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/my_name"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical" />

                            <TextView
                                android:id="@+id/my_status"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:ellipsize="marquee"
                                android:singleLine="true" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/wallet_balance_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/s_margin"
                            android:layout_marginLeft="@dimen/l_margin"
                            android:layout_marginTop="@dimen/s_margin"
                            android:text="@string/your_wallet_balance"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/wallet_balance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/s_margin"
                            android:layout_marginTop="@dimen/s_margin"
                            android:text="NA"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/transfer_bttn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_border_bacground"
                        android:text="@string/send"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/recieve_bttn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_border_bacground"
                        android:text="@string/recv"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/fragmentsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/scanqr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_border_bacground"
                        android:text="@string/scan_qr_code"
                        android:textColor="@color/colorPrimary" />

                    <Button
                        android:id="@+id/getownqr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_border_bacground"
                        android:text="@string/my_qr_code"
                        android:textColor="@color/colorPrimary" />

                    <fragment
                        android:id="@+id/frag_list"
                        class="app.src.com.walletapp.wifip2p.wifi.DeviceListFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8">
                        <!-- Preview: layout=@layout/row_devices -->
                    </fragment>

                    <fragment
                        android:id="@+id/frag_detail"
                        class="app.src.com.walletapp.wifip2p.wifi.DeviceDetailFragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8">
                        <!-- Preview: layout=@layout/device_detail -->
                    </fragment>
                </LinearLayout>

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </FrameLayout>
    <!--    <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->


    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        app:headerLayout="@layout/nav_header_main2"
        app:menu="@menu/activity_main2_drawer" />

    <!--</android.support.design.widget.CoordinatorLayout>-->


</android.support.v4.widget.DrawerLayout>

